--- a/frontend/style.css
+++ b/frontend/style.css
@@ -29,6 +29,27 @@
 }
 
 
+/* media-queries  */
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    .projects {
+        grid-template-columns: 1fr;
+    }
+}
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.fade-in.visible {
+    opacity: 1;
+}
+
+
 /* navbar ------------------------------------------------- */
 
 .container .nav-bar {
@@ -79,13 +100,14 @@
     height: 2rem;
     border: none;
     border-radius: 4px;
-    background-color: #efefef;
+    color: var(--color-white);
+    background-color: var(--third-color);
     box-shadow: 0 0 4px var(--third-color);
 }
 
 .nav-bar #download-cv:hover {
-    background: var(--third-color);
-    color: #ffff;
+    background: var(--color-white);
+    color: var(--text-second-color);
     cursor: pointer;
 }
 
@@ -131,6 +153,41 @@
     margin-bottom: 1rem;
 }
 
+.home-content h2 span {
+    display: inline-block;
+    content: '';
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--text-third-color);
+    animation: changeText 10s infinite;
+}
+
+@keyframes changeText {
+    0% {
+        content: "Software Engineer";
+    }
+    20% {
+        content: "Frontend Developer";
+    }
+    40% {
+        content: "Backend Developer";
+    }
+    60% {
+        content: "Fullstack Developer";
+    }
+    80% {
+        content: "Web Developer";
+    }
+    100% {
+        content: "Software Engineer";
+    }
+}
+
+.home-content h2 span::after {
+    content: "Software Engineer";
+    animation: changeText 10s infinite;
+}
+
 .home-content p {
     width: 50%;
     font-size: 1rem;
@@ -138,12 +195,11 @@
 }
 
 .home .btns {
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 .home-content #icons {
-    margin-left: -1rem;
-    width: 40%;
+    width: 35%;
     display: flex;
     justify-content: space-around;
 }
@@ -154,14 +210,23 @@
 }
 
 #icons li {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid grey;
-    box-shadow: 0 0 5px #0000007c;
+    box-shadow: 0 0 5px #b983837c;
+    background-color: var(--color-white);
+}
+
+#icons li:hover {
+    background-color: var(--third-color);
+}
+
+#icons li i {
+    font-size: 25px;
 }
 
 .home-content #together,
