--- a/frontend/style.css
+++ b/frontend/style.css
@@ -42,7 +42,7 @@
 
 .fade-in {
     opacity: 0;
-    transition: opacity 1s ease-in-out;
+    transition: opacity 1.5s ease-in-out;
 }
 
 .fade-in.visible {
@@ -206,6 +206,7 @@
 .home-content p {
     width: 50%;
     font-size: 1rem;
+    word-spacing: 2px;
     margin-bottom: 1rem;
 }
 
@@ -270,3 +271,73 @@
 
 
 /* home------------------------------------------------- */
+
+
+/* -------------projects------------------------------ */
+
+.projects {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projects .proj-con {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.projects span {
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--second-color);
+}
+
+.project{
+    width: 300px;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 0 0 7px var(--third-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: filter 0.3s ease;
+}
+.blur-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    transition: filter 0.3s ease;
+}
+.blur-container:hover{
+    cursor: pointer;
+    filter: blur(4px);
+}
+.project .showmore{
+    width: 10rem;
+    height: 3rem;
+    background-color: var(--third-color);
+    border-radius: 11px;
+    border: none;
+    color: var(--color-white);
+    font-size: 1rem;
+    cursor: pointer;
+    z-index: 2;
+    position: relative;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+.project:hover .showmore{
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+
+
+/* -------------projects------------------------------ */
