--- a/frontend/style.css
+++ b/frontend/style.css
@@ -120,7 +120,7 @@
 .home {
     padding-top: 4rem;
     display: flex;
-    width: 100%;
+    width: 90%;
     justify-content: space-around;
 }
 
@@ -205,7 +205,7 @@
 
 .home-content p {
     width: 50%;
-    font-size: 1rem;
+    font-size: 1.3rem;
     word-spacing: 2px;
     margin-bottom: 1rem;
 }
@@ -276,23 +276,26 @@
 /* -------------projects------------------------------ */
 
 .projects {
+    width: 100%;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .projects .proj-con {
     margin-top: 3rem;
     display: flex;
     justify-content: space-around;
-    width: 100%;
+    width: 90%;
 }
 
 .projects span {
-    font-size: 2rem;
-    font-weight: 600;
-    color: var(--second-color);
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: bold;
+    color: var(--first-color);
 }
 
 .project{
@@ -301,6 +304,7 @@
     border-radius: 5px;
     box-shadow: 0 0 7px var(--third-color);
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     cursor: pointer;
@@ -341,3 +345,54 @@
 
 
 /* -------------projects------------------------------ */
+
+/* ---------------------services------------------------------------ */
+.service{
+    margin-top: 4%;
+}
+.service h1{
+ text-align: center;
+ font-size: 2.4rem;
+ font-weight: bold;
+ color: var(--first-color);
+}
+.services-box{
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding-left: 5%;
+    padding-right: 4rem;
+
+}
+.services-box .box{
+    width: 300px;
+    height: 300px;
+    background-color: var(--first-color);
+    margin-right: 3rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0 0 5px var(--text-second-color);
+    color: var(--color-white);
+    
+}
+.services-box .box p{
+    width: 200px;
+}
+.box #read-more{
+    width: 8rem;
+    height: 2rem;
+    background-color: var(--third-color);
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    color: var(--color-white);
+   
+}
+.box i{
+    font-size: 3rem;
+}
+/* ---------------------services------------------------------------ */
