--- a/frontend/style.css
+++ b/frontend/style.css
@@ -96,18 +96,22 @@
 }
 
 .nav-bar #download-cv {
-    width: 6rem;
+    width: 8rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     height: 2rem;
     border: none;
     border-radius: 4px;
-    color: var(--color-white);
-    background-color: var(--third-color);
+    color: #000;
+
+    background: var(--color-white);
     box-shadow: 0 0 4px var(--third-color);
 }
 
 .nav-bar #download-cv:hover {
-    background: var(--color-white);
-    color: var(--text-second-color);
+    background-color: var(--third-color);
+    color:var(--color-white);
     cursor: pointer;
 }
 
