--- a/frontend/style.css
+++ b/frontend/style.css
@@ -401,3 +401,34 @@
     font-size: 3rem;
 }
 /* ---------------------services------------------------------------ */
+
+/* -------------------------Contact me ---------------------------------------- */
+
+.contact{
+    margin-top: 11rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.contact .contact-me{
+    width: 40%;
+    background-color: var(--second-color);
+    height: 20rem;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contact .contact-me span {
+    padding-top: 2rem;
+}
+.contact .send-info{
+    width: 40%;
+    background-color: var(--second-color);
+    height: 20rem;
+    border-radius: 4px;
+    
+}
+
+/* ----------------------------Contact me ------------------------------------------- */
