--- a/frontend/style.css
+++ b/frontend/style.css
@@ -300,15 +300,25 @@
 /* About sectin  */
 
 /* About Me Section Styles */
+.about{
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+}
 .about-section {
+    width: 90%;
     padding: 60px 0;
-    background-color: #f4f4f4;
+    /* background-color: #f4f4f4; */
 }
 
 .section-title {
     text-align: center;
     font-size: 32px;
     margin-bottom: 40px;
+}
+.skills h3{
+    text-align: center;
+    font-size: 2rem;
 }
 
 .about-box {
@@ -338,6 +348,9 @@
 .about-box p {
     font-size: 16px;
     margin-bottom: 20px;
+}
+.bio h2{
+    font-size: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -629,3 +642,41 @@
 
 
 /* ----------------------------Contact me ------------------------------------------- */
+
+/* footer-seciton */
+.container hr{
+    margin-top: 5rem;
+    opacity: 0.6;
+}
+.footer-section{
+    margin-top: 3rem;
+    width: 90%;
+    /* background-color: rebeccapurple; */
+    height: 10rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.brand-moto {
+    display: flex;
+    flex-direction: column;
+    width: 13rem;
+    align-items: center;
+}
+.brand-moto .moto{
+    padding-top: 1rem;
+    color: #000;
+    word-spacing: 2px;
+}
+.brand-moto img{
+    width: 5rem;
+    height: 5rem;
+    border-radius:50%;
+}
+body h2{
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    padding-bottom:5rem;
+}
