--- a/frontend/style.css
+++ b/frontend/style.css
@@ -71,8 +71,10 @@
     padding-top: 1.5rem;
     background-color: transparent;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    width: 90%;
+    margin-left: 5%;
 }
 
 .nav-bar #nav-list {
@@ -187,6 +189,10 @@
     font-size: 2rem;
     margin-bottom: 1rem;
 }
+#animated-bio{
+    /* background-color: red; */
+    display: flex;
+}
 
 .home-content h2 span {
     display: inline-block;
@@ -300,11 +306,12 @@
 /* About sectin  */
 
 /* About Me Section Styles */
-.about{
+.about {
     margin-top: 3rem;
     display: flex;
     justify-content: center;
 }
+
 .about-section {
     width: 90%;
     padding: 60px 0;
@@ -316,7 +323,8 @@
     font-size: 32px;
     margin-bottom: 40px;
 }
-.skills h3{
+
+.skills h3 {
     text-align: center;
     font-size: 2rem;
 }
@@ -349,7 +357,8 @@
     font-size: 16px;
     margin-bottom: 20px;
 }
-.bio h2{
+
+.bio h2 {
     font-size: 2rem;
 }
 
@@ -365,42 +374,43 @@
     justify-content: space-between;
     align-items: flex-start;
     padding: 20px;
-  }
-  
-  .bio {
+}
+
+.bio {
     width: 45%;
-  }
-  
-  .skills {
+}
+
+.skills {
     width: 45%;
-  }
-  
-  .skills-icons {
+}
+
+.skills-icons {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-  }
-  
-  .skills-icons i {
+}
+
+.skills-icons i {
     font-size: 40px;
     padding: 10px;
     color: #333;
-  }
-  
-  .skills-icons i:hover {
+}
+
+.skills-icons i:hover {
     color: #007bff;
     transition: color 0.3s ease-in-out;
-  }
-  
-  .about-section h2, .about-section h3 {
+}
+
+.about-section h2,
+.about-section h3 {
     margin-bottom: 15px;
-  }
-  
-  .about-section p {
+}
+
+.about-section p {
     line-height: 1.6;
     margin-bottom: 10px;
-  }
-  
+}
+
 /* About section  */
 /* -------------projects------------------------------ */
 
@@ -644,11 +654,14 @@
 /* ----------------------------Contact me ------------------------------------------- */
 
 /* footer-seciton */
-.container hr{
+.container hr {
+    margin-left: 5%;
+    width: 90%;
     margin-top: 5rem;
     opacity: 0.6;
 }
-.footer-section{
+
+.footer-section {
     margin-top: 3rem;
     width: 90%;
     /* background-color: rebeccapurple; */
@@ -657,26 +670,30 @@
     justify-content: space-between;
     align-items: center;
 }
+
 .brand-moto {
     display: flex;
     flex-direction: column;
     width: 13rem;
     align-items: center;
 }
-.brand-moto .moto{
+
+.brand-moto .moto {
     padding-top: 1rem;
     color: #000;
     word-spacing: 2px;
 }
-.brand-moto img{
+
+.brand-moto img {
     width: 5rem;
     height: 5rem;
-    border-radius:50%;
+    border-radius: 50%;
 }
-body h2{
+
+body h2 {
     margin-top: 1rem;
     font-size: 1rem;
     font-weight: 400;
     text-align: center;
-    padding-bottom:5rem;
+    padding-bottom: 5rem;
 }
