--- a/frontend/style.css
+++ b/frontend/style.css
@@ -701,3 +701,32 @@ body h2 {
     text-align: center;
     padding-bottom: 5rem;
 }
+
+/* making it responsive for mobile view  */
+
+@media (max-width: 428px) {
+    #about-section{
+        display: none;
+    }
+    #service-section{
+        display: none;
+    }
+    #project-section{
+        display: none;
+    }
+    #contact-section{
+        display: none;
+    }
+    .nav-bar{
+        width: 100vw;
+        background-color: red;
+    }
+    .nav-bar #nav-list{
+        /* display: none; */
+        background-color: green;
+        display: flex;
+        flex-direction: column;
+        margin-top: 5rem;
+
+    }
+}
