--- a/frontend/style.css
+++ b/frontend/style.css
@@ -718,15 +718,17 @@ body h2 {
         display: none;
     }
     .nav-bar{
-        width: 100vw;
         background-color: red;
     }
     .nav-bar #nav-list{
         /* display: none; */
-        background-color: green;
+        background-color: rgb(125, 155, 125);
         display: flex;
         flex-direction: column;
         margin-top: 5rem;
-
     }
+    #nav-list li{
+        padding-top: 5px;
+    }
+
 }
