--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-/* Variables */
+/* Variables for colors */
 
 :root {
     --body-color: rgb(250, 250, 250);
